[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resource/RoomTilemap.tres" type="TileSet" id=1]
[ext_resource path="res://Rooms/Room.gd" type="Script" id=2]

[node name="Room" type="Node2D"]
script = ExtResource( 2 )

[node name="Entrance" type="Node2D" parent="."]

[node name="Doors" type="Node2D" parent="."]

[node name="EnemyPositions" type="Node2D" parent="."]

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Navigation2D" type="Navigation2D" parent="."]
cell_size = 16.0

[node name="TileMap" type="TileMap" parent="Navigation2D"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
bake_navigation = true
format = 1

[node name="TileMap2" type="TileMap" parent="Navigation2D"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
bake_navigation = true
format = 1

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
